# blcaptain-lingjian-video

./: .gitignore  02_PRD_GOAL_REFINEMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  LICENSE  README.en.md  README.md  ROADMAP.md  SKILL.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.codex-plugin/: plugin.json
capabilities/: README.md
director-board/: README.md  board.schema.json  render.js  standalone.html
docs/: CAPABILITY_MATRIX.md  CREATOR_QUICKSTART.md  ONBOARDING.md  USER_INSTALL_TO_RELEASE_WORKFLOW.md  gallery.html  installation.md  license-notes.md  platform-presets.md  providers.md  render-engines.md  skill-and-mcp.md  troubleshooting.md
examples/: product_intro_zh.txt
lingjian_M1_FINAL_after_claude_final_audit/: 00_PRODUCT_DEFINITION_FINAL.md  01_UX_AND_BUSINESS_FLOW_FINAL.md  03_CODEX_M1_EXECUTION_PROMPT_8STEP.md  README_FINAL.md
lingjian_video_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
providers/: base.py  cli.py  inherited_cli.py  local_zero_key_tts.py  openai_compatible.py  registry.py  validation.py  volcengine_tts.py
scripts/: install_skill_links.sh
styles/: cinematic.md  dark_keynote.md  neue_sachlichkeit.md  vox_cut.md
tasks/: lessons.md  todo.md
tests/: conftest.py  test_batch2_release_export.py  test_batch2_text_provider.py  test_capability_onboarding.py  test_cli_contract.py  test_console.py  test_core_gate.py  test_director_contract.py  test_doctor.py  test_ecosystem_integration.py  test_m2_visual_generation_tts.py  test_provider_contract.py  test_run_verification.py  (+2 more)
(+127 files in other folders)
